--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "Velocity"
   ],
   "author": "David Hérault <dherault@gmail.com> (https://github.com/dherault)",
+  "contributors": [
+    {
+      "name": "Kiryl Yermakou",
+      "email": "rma4ok@gmail.com",
+      "url": "https://github.com/rma4ok"
+    }
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/dherault/serverless-offline/issues"
@@ -27,6 +34,7 @@
     "atob": "^2.0.0",
     "babel-register": "^6.5.2",
     "btoa": "^1.1.2",
+    "coffee-script": "^1.10.0",
     "hapi": "^13.0.0",
     "js-string-escape": "^1.0.0",
     "jsonpath-plus": "^0.14.0",
