--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     {
       "name": "DJCrabhat",
       "url": "https://github.com/djcrabhat"
+    },
+    {
+      "name": "Martin Micunda",
+      "url": "https://github.com/martinmicunda"
     }
   ],
   "license": "MIT",
