--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
   "homepage": "https://github.com/dherault/serverless-offline",
   "dependencies": {
     "babel-register": "^6.8.0",
+    "boom": "^3.1.3",
     "coffee-script": "^1.10.0",
     "hapi": "^13.4.0",
     "js-string-escape": "^1.0.1",
     "jsonpath-plus": "^0.15.0",
+    "lodash.filter": "^4.4.0",
     "lodash.isplainobject": "^4.0.4",
     "velocityjs": "^0.8.0"
   },
