--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serverless-offline",
-  "version": "2.5.3",
+  "version": "2.6.0",
   "description": "Emulate AWS λ and API Gateway locally when developing your Serverless project",
   "main": "src/index.js",
   "scripts": {},
@@ -54,7 +54,7 @@
     "babel-register": "^6.9.0",
     "boom": "^3.1.3",
     "coffee-script": "^1.10.0",
-    "hapi": "^13.4.0",
+    "hapi": "13.3.0",
     "js-string-escape": "^1.0.1",
     "jsonpath-plus": "^0.15.0",
     "lodash.isplainobject": "^4.0.4",
