--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serverless-offline",
-  "version": "2.6.2",
+  "version": "2.7.0",
   "description": "Emulate AWS λ and API Gateway locally when developing your Serverless project",
   "main": "src/index.js",
   "scripts": {},
@@ -47,6 +47,10 @@
     {
       "name": "Russell Schick",
       "url": "https://github.com/rschick"
+    },
+    {
+      "name": "Cameron Cooper",
+      "url": "https://github.com/cameroncooper"
     }
   ],
   "license": "MIT",
