--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serverless-offline",
-  "version": "2.7.2",
+  "version": "2.8.0",
   "description": "Emulate AWS λ and API Gateway locally when developing your Serverless project",
   "main": "src/index.js",
   "scripts": {},
@@ -55,6 +55,11 @@
     {
       "name": "Piotr Gasiorowski",
       "url": "https://github.com/WooDzu"
+    },
+    {
+      "name": "Norimitsu Yamashita",
+      "url": "https://github.com/nori3tsu",
+      "email": "tugend.licht@gmail.com"
     }
   ],
   "license": "MIT",
@@ -63,18 +68,18 @@
   },
   "homepage": "https://github.com/dherault/serverless-offline",
   "dependencies": {
-    "babel-register": "^6.9.0",
-    "boom": "^3.1.3",
+    "babel-register": "^6.11.6",
+    "boom": "^3.2.2",
     "coffee-script": "^1.10.0",
-    "hapi": "13.3.0",
+    "hapi": "14.1.0",
     "js-string-escape": "^1.0.1",
     "jsonpath-plus": "^0.15.0",
-    "lodash.isplainobject": "^4.0.4",
-    "velocityjs": "^0.8.0"
+    "lodash.isplainobject": "^4.0.5",
+    "velocityjs": "^0.8.5"
   },
   "devDependencies": {
-    "eslint": "^2.10.2",
-    "eslint-config-airbnb-base": "^3.0.1",
-    "eslint-plugin-import": "^1.8.0"
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb-base": "^5.0.1",
+    "eslint-plugin-import": "^1.12.0"
   }
 }
