--- a/package.json
+++ b/package.json
@@ -19,48 +19,16 @@
   ],
   "author": "David Hérault <dherault@gmail.com> (https://github.com/dherault)",
   "contributors": [
-    {
-      "name": "Kiryl Yermakou",
-      "email": "rma4ok@gmail.com",
-      "url": "https://github.com/rma4ok"
-    },
-    {
-      "name": "Andrei Popovici",
-      "url": "https://github.com/andreipopovici"
-    },
-    {
-      "name": "DJCrabhat",
-      "url": "https://github.com/djcrabhat"
-    },
-    {
-      "name": "Martin Micunda",
-      "url": "https://github.com/martinmicunda"
-    },
-    {
-      "name": "Andre Rabold",
-      "url": "https://github.com/arabold"
-    },
-    {
-      "name": "John McKim",
-      "url": "https://github.com/johncmckim"
-    },
-    {
-      "name": "Russell Schick",
-      "url": "https://github.com/rschick"
-    },
-    {
-      "name": "Cameron Cooper",
-      "url": "https://github.com/cameroncooper"
-    },
-    {
-      "name": "Piotr Gasiorowski",
-      "url": "https://github.com/WooDzu"
-    },
-    {
-      "name": "Norimitsu Yamashita",
-      "url": "https://github.com/nori3tsu",
-      "email": "tugend.licht@gmail.com"
-    }
+      "Kiryl Yermakou (https://github.com/rma4ok)",
+      "Andrei Popovici (https://github.com/andreipopovici)",
+      "DJCrabhat (https://github.com/djcrabhat)",
+      "Martin Micunda (https://github.com/martinmicunda)",
+      "Andre Rabold (https://github.com/arabold)",
+      "John McKim (https://github.com/johncmckim)",
+      "Russell Schick (https://github.com/rschick)",
+      "Cameron Cooper (https://github.com/cameroncooper)",
+      "Piotr Gasiorowski (https://github.com/WooDzu)",
+      "Norimitsu Yamashita (https://github.com/nori3tsu)"
   ],
   "license": "MIT",
   "bugs": {
