--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "hapi": "14.1.0",
     "js-string-escape": "^1.0.1",
     "jsonpath-plus": "^0.15.0",
-    "lodash.isplainobject": "^4.0.5",
+    "lodash": "^4.15.0",
     "velocityjs": "^0.8.5"
   },
   "devDependencies": {
