--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serverless-offline",
-  "version": "2.8.2",
+  "version": "2.8.3",
   "description": "Emulate AWS λ and API Gateway locally when developing your Serverless project",
   "main": "src/index.js",
   "scripts": {},
@@ -14,17 +14,18 @@
     "Amazon Web Services",
     "AWS",
     "APIG",
-    "API Gateway",
-    "Velocity"
+    "API Gateway"
   ],
   "author": "David Hérault <dherault@gmail.com> (https://github.com/dherault)",
   "contributors": [
+      "Michael Staub (https://github.com/mikestaub)",
+      "Bilal Soylu (https://github.com/Bilal-S)",
+      "John McKim (https://github.com/johncmckim)",
       "Kiryl Yermakou (https://github.com/rma4ok)",
       "Andrei Popovici (https://github.com/andreipopovici)",
       "DJCrabhat (https://github.com/djcrabhat)",
       "Martin Micunda (https://github.com/martinmicunda)",
       "Andre Rabold (https://github.com/arabold)",
-      "John McKim (https://github.com/johncmckim)",
       "Russell Schick (https://github.com/rschick)",
       "Cameron Cooper (https://github.com/cameroncooper)",
       "Piotr Gasiorowski (https://github.com/WooDzu)",
