--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "John McKim (https://github.com/johncmckim)",
     "Kiryl Yermakou (https://github.com/rma4ok)",
     "Martin Micunda (https://github.com/martinmicunda)",
-    "Michael Staub (https://github.com/mikestaub)"
+    "Michael Staub (https://github.com/mikestaub)",
     "Norimitsu Yamashita (https://github.com/nori3tsu)",
     "Piotr Gasiorowski (https://github.com/WooDzu)",
-    "Russell Schick (https://github.com/rschick)",
+    "Russell Schick (https://github.com/rschick)"
   ],
   "license": "MIT",
   "bugs": {
