--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serverless-offline",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "description": "Emulate AWS λ and API Gateway locally when developing your Serverless project",
   "main": "src/index.js",
   "scripts": {
@@ -32,6 +32,7 @@
     "Martin Micunda (https://github.com/martinmicunda)",
     "Michael Staub (https://github.com/mikestaub)",
     "Norimitsu Yamashita (https://github.com/nori3tsu)",
+    "Oliv (https://github.com/obearn)",
     "Piotr Gasiorowski (https://github.com/WooDzu)",
     "Russell Schick (https://github.com/rschick)"
   ],
