--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-register": "^6.18.0",
     "boom": "^4.2.0",
     "coffee-script": "^1.11.1",
+    "crypto": "0.0.3",
     "hapi": "15.2.0",
     "js-string-escape": "^1.0.1",
     "jsonpath-plus": "^0.15.0",
