--- a/package.json
+++ b/package.json
@@ -89,11 +89,13 @@
     "babel-register": "^6.18.0",
     "boom": "^4.2.0",
     "crypto": "^0.0.3",
+    "detect-json-style": "^1.0.2",
     "hapi": "14.2.0",
     "hapi-cors-headers": "^1.0.0",
     "js-string-escape": "^1.0.1",
     "jsonpath-plus": "^0.16.0",
     "lodash": "^4.17.4",
+    "trim-newlines": "^2.0.0",
     "velocityjs": "^0.9.3"
   },
   "devDependencies": {
