add myself (as indicated in contributing)

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "Al Pal (https://github.com/againer)",
     "allenhartwig (https://github.com/allenhartwig)",
     "Andre Rabold (https://github.com/arabold)",
+    "Andras Streichardt (https://github.com/m0ppers)",
     "Andrei Popovici (https://github.com/andreipopovici)",
     "Anthony Liatsis (https://github.com/aliatsis)",
     "Austen (https://github.com/ac360)",
