--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "nelson",
+  "extends": "airbnb-base",
   "rules": {
     "class-methods-use-this": 0,
     "key-spacing": 0,
@@ -7,5 +7,13 @@
     "one-var": 0,
     "prefer-rest-params": 0,
     "strict": 0,
+    "no-console": 0,
+    "no-unused-expressions": 0,
+    "no-underscore-dangle": 0,
+    "guard-for-in": 0,
+    "no-param-reassign": 0,
+    "max-len": 0,
+    "no-restricted-syntax": 0,
+    "consistent-return": 0
   }
 }
