--- a/package.json
+++ b/package.json
@@ -108,27 +108,27 @@
   },
   "homepage": "https://github.com/dherault/serverless-offline",
   "dependencies": {
+    "@babel/core": "^7.1.2",
     "@babel/register": "^7.0.0",
-    "@babel/core": "^7.0.0",
     "boom": "^4.2.0",
+    "cryptiles": "^4.1.2",
     "h2o2": "^5.4.0",
     "hapi": "14.2.0",
-    "cryptiles": "^4.1.2",
     "hapi-cors-headers": "^1.0.3",
     "js-string-escape": "^1.0.1",
     "jsonpath-plus": "^0.16.0",
     "jsonwebtoken": "^8.3.0",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "uuid": "^3.3.2",
-    "velocityjs": "^1.1.2"
+    "velocityjs": "^1.1.3"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "dirty-chai": "^2.0.1",
-    "eslint": "^3.19.0",
-    "eslint-config-nelson": "^0.2.0",
+    "eslint": "^5.6.1",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "mocha": "^5.2.0",
-    "sinon": "^6.2.0"
+    "sinon": "^6.3.5"
   }
 }
