--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Emulate AWS λ and API Gateway locally when developing your Serverless project",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha test",
+    "test": "SLS_DEBUG=* mocha test",
     "lint": "eslint src/**/*.js test/**/*.js"
   },
   "repository": {
@@ -129,7 +129,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "dirty-chai": "^2.0.1",
-    "eslint": "^5.10.0",
+    "eslint": "^5.11.1",
     "eslint-config-nelson": "^0.2.0",
     "eslint-plugin-import": "^2.14.0",
     "mocha": "^5.2.0",
