--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Emulate AWS λ and API Gateway locally when developing your Serverless project",
   "main": "src/index.js",
   "scripts": {
-    "test": "SLS_DEBUG=* mocha test",
+    "test": "mocha test",
     "lint": "eslint src/**/*.js test/**/*.js"
   },
   "repository": {
