Added support for identitySource in authorizer

--- a/src/__tests__/manual/websocket/authorizer/scripts/serverless..yml
+++ b/src/__tests__/manual/websocket/authorizer/scripts/serverless..yml
@@ -41,7 +41,11 @@ functions:
     events:
       - websocket:
           route: $connect
-          authorizer: auth
+          # authorizer: auth
+          authorizer:
+            name: auth
+            identitySource:
+              - 'route.request.header.Auth123'
   auth:
     handler: handler.auth
   echo:
