1st step in consolidating e2e tests

--- a/src/__tests__/manual/websocket/serverless.RouteSelection.yml
+++ b/src/__tests__/manual/websocket/serverless.RouteSelection.yml
@@ -21,8 +21,22 @@ provider:
 
 functions:     
   echo:
-    handler: handler.echo
+    handler: handler.RouteSelection.echo
     events:
       - websocket:
           route: echo
  
+plugins:
+  - serverless-offline
+
+package:
+  exclude:
+    - ./**
+  include:
+    - handler.RouteSelection.js
+
+custom:
+  serverless-offline:
+    port: 3004
+    websocketPort: 3005
+
