Move into folders test, config & support.

--- a/src/__tests__/manual/websocket/config/serverless.RouteSelection.yml
+++ b/src/__tests__/manual/websocket/config/serverless.RouteSelection.yml
@@ -21,7 +21,7 @@ provider:
 
 functions:     
   echo:
-    handler: handler.RouteSelection.echo
+    handler: config/handler.RouteSelection.echo
     events:
       - websocket:
           route: echo
@@ -33,7 +33,7 @@ package:
   exclude:
     - ./**
   include:
-    - handler.RouteSelection.js
+    - config/handler.RouteSelection.js
 
 custom:
   serverless-offline:
